notes on regularization

--- a/pca-log-saga/moa-pca-loge.ipynb
+++ b/pca-log-saga/moa-pca-loge.ipynb
@@ -340,7 +340,9 @@
     "\n",
     "No wonder they want people pulling out deep learning to attack this.\n",
     "\n",
-    "Would be good to cycle through the whole list and see which columns perform how."
+    "Would be good to cycle through the whole list and see which columns perform how.\n",
+    "\n",
+    "Oh, and very interesting to see if any of the PCA components got zero coefficients under L1 regularization... for each target... that's a lot to check."
    ]
   },
   {
