--- a/pca-log-saga/moa-explore.ipynb
+++ b/pca-log-saga/moa-explore.ipynb
@@ -2345,6 +2345,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "My takeaway from this sampling is that these distributions are all centered on 0, and the difference is all in the tails. A small number of trial conditions caused gene expression to either drop or rise significantly, with the vast bulk of them showing no change."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Want to automate a way of looking for correlations between individual features and individual target columns.\n",
+    "\n",
+    "Then cull the highest correlation features for the next stage of evaluation.\n",
+    "\n",
+    "Next, check these to see if these feature columns are close to linearly dependent on each other and eliminate the least \"interesting\" ones (via some metric). Won't catch other forms of dependency, but will catch that.\n",
+    "\n",
+    "Seems to me like this would be a fast way to do some preliminary regularization prior to training a classifier for each column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Meanwhile, at some point soon I will want to prowl the competition leaderboard to see what others have been doing now that I've tangled with the data myself for a while."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
