--- a/pca-log-saga/moa-pca-nb.ipynb
+++ b/pca-log-saga/moa-pca-nb.ipynb
@@ -346,6 +346,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can take this, spit it out and upload it to Kaggle as a baseline along with the logistic regression results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
